--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,10 @@ body {
 .container {
   text-align: center;
 }
+.task-list {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-left: 0px;
+}
