--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,22 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 .container {
-  text-align: center;
-}
-.task-list {
-  list-style-type: none;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.task-list {
+  list-style-type: square;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   padding-left: 0px;
+}
+.list-item {
+  padding: 5px;
+  cursor: pointer;
+  font-size: 18px;
+}
+.done {
+  text-decoration: line-through;
 }
